http post (post)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <input type="text" class="form-control" [(ngModel)]="carName" >
     <hr>
   <button class="btn btn-primary" (click)="loadCar()">loader car</button>
-  <button class="btn btn-success">add car</button>
+  <button class="btn btn-success" (click)="addCar()">add car</button>
     <hr>
     <ul class="list-group">
         <li class="list-group-item" *ngFor="let car of cars">
